sjeng/use_undefined_identifier/c1/l_rook_mobility
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/l_rook_mobility/src/leval.c:525:7: error: use of undeclared identifier 'dword_66359C'
v4 = &dword_66359C[square]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/l_rook_mobility/src/obj/leval.o] Error 1
